对网站添加icon图标

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta name="keywords" content="在线免费软件工具箱">
     <meta name="description" content="一款在线免费软件工具箱，无需登录，无需费用，用完就走的软件工具。包有BMI计算、倒计时、单位转换、密码生成器、摩斯电码、代码编辑器、计算器、快递查询、二维码生成、网速测速，还包过有轻松小游戏，有扫雷、猜拳、数字华容道、走迷宫、猜数字、文字游戏等。">
     <link rel="canonical" href="https://tool.openai2025.com/">
+    <link rel="icon" href="favicon.ico" type="image/x-icon"/>
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon"/>。
     <link rel="stylesheet" href="scss/index.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <!-- Google tag (gtag.js) -->
