--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>传道在线免费软件工具箱</title>
+    <title>在线免费软件工具箱-传道软件箱</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="在线免费软件工具箱">
-    <meta name="description" content="一款在线免费软件工具箱，无需登录，无需费用，用完就走的软件工具。包有BMI计算、倒计时、单位转换、密码生成器、摩斯电码、代码编辑器、计算器、快递查询、二维码生成、网速测速，还包过有轻松小游戏，有扫雷、猜拳、数字华容道、走迷宫、猜数字、文字游戏等。">
+    <meta name="keywords" content="在线免费软件工具箱、传道软件箱">
+    <meta name="description" content="传道软件箱是一款在线免费软件工具箱，无需登录，无需费用，用完就走的软件工具。包有BMI计算、倒计时、单位转换、密码生成器、摩斯电码、代码编辑器、计算器、快递查询、二维码生成、网速测速，还包过有轻松小游戏，有扫雷、猜拳、数字华容道、走迷宫、猜数字、文字游戏等。">
     <link rel="canonical" href="https://tool.openai2025.com/">
     <link rel="icon" href="favicon.ico" type="image/x-icon"/>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon"/>
@@ -24,7 +24,7 @@
 </head>
 <body>
 <div class="container">
-    <h1>传道在线免费软件工具箱</h1>
+    <h1>传道软件箱</h1>
     <div class="toolbox">
         <div class="toolbox__item">
             <a href="bmi.html">
