--- a/csz.html
+++ b/csz.html
@@ -59,6 +59,8 @@
 
         gtag('config', 'G-SQLH42B270');
     </script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7274710287377352"
+            crossorigin="anonymous"></script>
 </head>
 <body>
     <h1>猜数字游戏</h1>
