--- a/dzk.html
+++ b/dzk.html
@@ -191,6 +191,8 @@
 
       draw();
     </script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7274710287377352"
+            crossorigin="anonymous"></script>
   </body>
 </html>
 <div style="border: 2px solid orange; background-color: #ffe6cc; padding: 10px;">
