--- a/ms.html
+++ b/ms.html
@@ -50,6 +50,8 @@
 
         gtag('config', 'G-SQLH42B270');
     </script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7274710287377352"
+            crossorigin="anonymous"></script>
 </head>
 <body>
     <h1>摩斯电码生成和解码工具</h1>
