--- a/dzk.html
+++ b/dzk.html
@@ -21,7 +21,7 @@
       gtag('config', 'G-SQLH42B270');
     </script>
   </head>
-  <body>
+  <body style="margin: 10px auto ;width: 1000px;">
     <canvas id="canvas" width="1000" height="400"></canvas>
 
     <script>
