--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 
     <div class="toolbox">
         <div class="toolbox__item">
-            <a href="https://mosaic.openai2025.com/" target="_blank">
+            <a href="mosaic/index.html" target="_blank">
                 <div class="toolbox__item-icon">
                     <img src="images/msk.png" height="48" width="48"/>
                 </div>
@@ -178,7 +178,7 @@
             </a>
         </div>
         <div class="toolbox__item">
-            <a href="https://watermark.openai2025.com/" target="_blank">
+            <a href="watermark/index.html" target="_blank">
                 <div class="toolbox__item-icon">
                     <img src="images/sy.png" height="48" width="48"/>
                 </div>
@@ -186,7 +186,7 @@
             </a>
         </div>
         <div class="toolbox__item">
-            <a href="https://compress.openai2025.com/" target="_blank">
+            <a href="compress/index.html" target="_blank">
                 <div class="toolbox__item-icon">
                     <img src="images/ys.png" height="48" width="48"/>
                 </div>
@@ -194,7 +194,7 @@
             </a>
         </div>
         <div class="toolbox__item">
-            <a href="https://icon.openai2025.com/" target="_blank">
+            <a href="icon/index.html" target="_blank">
                 <div class="toolbox__item-icon">
                     <img src="images/icon.png" height="48" width="48"/>
                 </div>
@@ -203,7 +203,7 @@
         </div>
 
         <div class="toolbox__item">
-            <a href="https://getcolor.openai2025.com/" target="_blank">
+            <a href="getcolor/index.html" target="_blank">
                 <div class="toolbox__item-icon" style="text-align: center">
 
 
@@ -214,7 +214,7 @@
         </div>
 
         <div class="toolbox__item">
-            <a href="https://img2excel.openai2025.com/" target="_blank">
+            <a href="excel/index.html" target="_blank">
                 <div class="toolbox__item-icon">
                     <img src="images/excel.png" height="48" width="48"/>
                 </div>
@@ -226,7 +226,7 @@
     <h1>在线开发工具</h1>
     <div class="toolbox">
         <div class="toolbox__item">
-            <a href="https://base64.openai2025.com/" target="_blank">
+            <a href="base64.html" target="_blank">
                 <div class="toolbox__item-icon">
                     <img src="images/base64.png" height="48" width="48"/>
                 </div>
@@ -234,7 +234,7 @@
             </a>
         </div>
         <div class="toolbox__item">
-            <a href="https://json.openai2025.com/" target="_blank">
+            <a href="json/index.html" target="_blank">
                 <div class="toolbox__item-icon">
                     <img src="images/json.png" height="48" width="48"/>
                 </div>
@@ -242,7 +242,7 @@
             </a>
         </div>
         <div class="toolbox__item">
-            <a href="https://reg.openai2025.com/" target="_blank">
+            <a href="reg/index.html" target="_blank">
                 <div class="toolbox__item-icon">
                     <img src="images/reg.png" height="48" width="48"/>
                 </div>
