--- a/mg.html
+++ b/mg.html
@@ -37,7 +37,7 @@
     .timer {
       text-align: center;
       font-size: 24px;
-      margin-top: 20px;
+      margin-top: 40px;
     }
 
     /* 虚拟方向键样式 */
@@ -67,7 +67,7 @@
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7274710287377352"
           crossorigin="anonymous"></script>
 </head>
-<body>
+<body style="margin: 10px auto ;width: 400px;">
   <h1>走迷宫游戏-迷宫被我挡住咯</h1>
   <h2>选择完角色才能开始哦，时间如流水</h2>
 
