--- a/sl.html
+++ b/sl.html
@@ -10,6 +10,8 @@
     .board {
       display: inline-block;
       border: 1px solid black;
+      text-align: center;
+      margin: auto;
     }
     .cell {
       width: 30px;
@@ -33,7 +35,8 @@
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7274710287377352"
           crossorigin="anonymous"></script>
 </head>
-<body>
+<body style="margin: 10px auto ;width: 600px;">
+<h1 style="text-align: center">扫雷</h1>
   <div class="board">
     <table id="gameBoard"></table>
   </div>
